--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="index.js"></script>
     <title>Todos</title>
     <style>
         table {
@@ -19,6 +20,7 @@
 </head>
 <body>
     <h1>Todos</h1>
+    <button onclick="get()">GET</button>
     <table id="todo-table">
         <thead>
             <tr>
@@ -30,23 +32,6 @@
         <tbody>
         </tbody>
     </table>
-    <script>
-        fetch('https://jsonplaceholder.typicode.com/todos')
-            .then(response => response.json())
-            .then(data => {
-                const tableBody = document.querySelector('#todo-table tbody');
-
-                data.forEach(todo => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${todo.id}</td>
-                        <td>${todo.title}</td>
-                        <td>${todo.completed ? 'Yes' : 'No'}</td>
-                    `;
-                    tableBody.appendChild(row);
-                });
-            })
-            .catch(error => console.error('Error fetching data:', error));
-    </script>
+ 
 </body>
 </html>
