--- a/demo_cloud.html
+++ b/demo_cloud.html
@@ -104,254 +104,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@12.11.5/dist/sweetalert2.min.js"></script>
     <script>
-        let userName;
-        const chatApiUrl = 'https://json-db-byhc.onrender.com/chats';
-        let currentMessages = [];
-        const chatContainer = document.querySelector(".chat-container");
-
-        // Function to format the current time as HH:MM:SS:MS
-        function formatTime() {
-            const now = new Date();
-            const hours = now.getHours().toString().padStart(2, '0');
-            const minutes = now.getMinutes().toString().padStart(2, '0');
-            const seconds = now.getSeconds().toString().padStart(2, '0');
-            const milliseconds = now.getMilliseconds().toString().padStart(3, '0');
-            return `${hours}:${minutes}:${seconds}:${milliseconds}`;
-        }
-
-        // Function to fetch messages and update the chat interface
-        function fetchAndRenderMessages() {
-            fetch(chatApiUrl)
-                .then(response => response.json())
-                .then(data => {
-                    // Compare the fetched messages with the current messages
-                    if (JSON.stringify(data) !== JSON.stringify(currentMessages)) {
-                        // If there's a change, update the chat interface
-                        currentMessages = data;
-                        renderMessages(data);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        }
-
-        // Function to render messages in the chat interface
-        function renderMessages(messages) {
-            const chatMessages = document.getElementById("chat-messages");
-            chatMessages.innerHTML = ''; // Clear existing messages
-
-            messages.forEach(message => {
-                addMessageToChat(message.user, message.text, message.time);
-            });
-        }
-
-        // SweetAlert to get the user's name on page load
-        Swal.fire({
-            title: 'Enter your name:',
-            input: 'text',
-            inputAttributes: {
-                autocapitalize: 'off'
-            },
-            showCancelButton: false,
-            confirmButtonText: 'Set Name',
-            preConfirm: (name) => {
-                if (name) {
-                    userName = name;
-                    document.getElementById("message-input").disabled = false;
-                    document.getElementById("send-button").disabled = false;
-                    document.getElementById("welcomeMessage").innerHTML = `Hello, <b>${userName}</b>`;
-                    chatContainer.style.display = 'block'; // Show the chat container
-                    fetchAndRenderMessages(); // Fetch and display messages after the user provides their name
-                    setInterval(fetchAndRenderMessages, 3000)
-                }
-            }
-        });
-
-        // Send message when the user presses Enter
-        document.getElementById("message-input").addEventListener("keyup", (event) => {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        });
-
-        // Send message when the "Send" button is clicked
-        document.getElementById("send-button").addEventListener("click", sendMessage);
-
-        function sendMessage() {
-            const message = document.getElementById("message-input").value.trim();
-            if (message) {
-                const currentTime = formatTime();
-                addMessageToChat(userName, message, currentTime);
-
-                // Post the new message to the server
-                fetch(chatApiUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        user: userName,
-                        text: message,
-                        time: currentTime
-                    })
-                })
-                .then(response => {
-                    if (response.status === 201) {
-                        console.log('Message sent successfully.');
-                    } else {
-                        console.error('Failed to send message.');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-
-                document.getElementById("message-input").value = '';
-            }
-        }
-
-        function addMessageToChat(sender, message, time) {
-            const chatMessages = document.getElementById("chat-messages");
-
-            const messageContainer = document.createElement('div');
-            const messageBalloon = document.createElement('div');
-            const messageTime = document.createElement('div'); // New element for time
-            if (sender === userName) {
-                messageContainer.className = 'message-container';
-                messageBalloon.className = 'message-balloon';
-                messageTime.className = 'message-time';
-                messageBalloon.innerHTML = 
-                    `<span style="font-size: 10px;color:white">${sender}</span> `;                
-            } else {
-                messageContainer.className = 'message-container-received';
-                messageBalloon.className = 'message-balloon-received';
-                messageTime.className = 'message-time';
-                messageBalloon.innerHTML = 
-                    `<span style="font-size: 10px;color:red">${sender}</span> `;                                
-            }
-            messageBalloon.innerHTML +=  
-            message + 
-            `<br /><span style="font-size: 10px;">${time}</span>`;
-            messageTime.innerHTML = time; // Set the time text
-            messageContainer.appendChild(messageBalloon);
-            //messageContainer.appendChild(messageTime);
-            chatMessages.insertBefore(messageContainer, chatMessages.firstChild); // Insert at the beginning
-        }
-
-        function loadMessages() {
-            fetch(chatApiUrl)
-                .then(response => response.json())
-                .then(data => {
-                    // Sort messages in descending order based on time
-                    data.sort((a, b) => (a.time > b.time) ? -1 : 1);
-                    data.forEach(message => {
-                        addMessageToChat(message.user, message.text, message.time);
-                    });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        }
-
-        function updateMessage(sender, message, time, messageBalloon) {
-            Swal.fire({
-                title: 'Update Message',
-                input: 'text',
-                inputValue: message,
-                inputAttributes: {
-                    autocapitalize: 'off'
-                },
-                showCancelButton: true,
-                confirmButtonText: 'Save',
-                preConfirm: (newMessage) => {
-                    if (newMessage) {
-                        const currentTime = formatTime();
-                        messageBalloon.innerHTML = `${newMessage} (${currentTime})`;
-                        // Send a PATCH request to the server to update the message
-                        fetch(chatApiUrl, {
-                            method: 'PATCH',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({
-                                user: sender,
-                                text: newMessage,
-                                time: currentTime
-                            })
-                        })
-                        .then(response => {
-                            if (response.status === 204) {
-                                console.log('Message updated successfully.');
-                            } else {
-                                console.error('Failed to update message.');
-                            }
-                        })
-                        .catch(error => {
-                            console.error('Error:', error);
-                        });
-                    } else {
-                        Swal.showValidationMessage('Please enter a message');
-                    }
-                }
-            });
-        }
-
-        function deleteMessage(sender, message, time, messageBalloon) {
-            Swal.fire({
-                title: 'Delete Message',
-                text: 'Are you sure you want to delete this message?',
-                showCancelButton: true,
-                confirmButtonText: 'Delete',
-                cancelButtonText: 'Cancel',
-                confirmButtonColor: '#d33',
-                dangerMode: true
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    // Remove the message balloon
-                    messageBalloon.remove();
-                    // Send a DELETE request to the server to delete the message
-                    fetch(chatApiUrl, {
-                        method: 'DELETE',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                            user: sender,
-                            text: message,
-                            time: time
-                        })
-                    })
-                    .then (response => {
-                        if (response.status === 204) {
-                            console.log('Message deleted successfully.');
-                        } else {
-                            console.error('Failed to delete message.');
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                    });
-                }
-            });
-        }
-
-        // Function to retrieve messages from the API
-        function loadMessages() {
-            fetch(chatApiUrl)
-                .then(response => response.json())
-                .then(data => {
-                    data.forEach(message => {
-                        addMessageToChat(message.user, message.text, message.time);
-                    });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-        }
-
-        // Load messages when the page is loaded
-        window.onload = loadMessages;
+       let userName;const chatApiUrl="https://json-db-byhc.onrender.com/chats";let currentMessages=[];const chatContainer=document.querySelector(".chat-container");function formatTime(){let e=new Date,t=e.getHours().toString().padStart(2,"0"),s=e.getMinutes().toString().padStart(2,"0"),a=e.getSeconds().toString().padStart(2,"0"),n=e.getMilliseconds().toString().padStart(3,"0");return`${t}:${s}:${a}:${n}`}function fetchAndRenderMessages(){fetch(chatApiUrl).then(e=>e.json()).then(e=>{JSON.stringify(e)!==JSON.stringify(currentMessages)&&(currentMessages=e,renderMessages(e))}).catch(e=>{console.error("Error:",e)})}function renderMessages(e){let t=document.getElementById("chat-messages");t.innerHTML="",e.forEach(e=>{addMessageToChat(e.user,e.text,e.time)})}function sendMessage(){let e=document.getElementById("message-input").value.trim();if(e){let t=formatTime();addMessageToChat(userName,e,t),fetch(chatApiUrl,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({user:userName,text:e,time:t})}).then(e=>{201===e.status?console.log("Message sent successfully."):console.error("Failed to send message.")}).catch(e=>{console.error("Error:",e)}),document.getElementById("message-input").value=""}}function addMessageToChat(e,t,s){let a=document.getElementById("chat-messages"),n=document.createElement("div"),r=document.createElement("div"),o=document.createElement("div");e===userName?(n.className="message-container",r.className="message-balloon",o.className="message-time",r.innerHTML=`<span style="font-size: 10px;color:white">${e}</span> `):(n.className="message-container-received",r.className="message-balloon-received",o.className="message-time",r.innerHTML=`<span style="font-size: 10px;color:red">${e}</span> `),r.innerHTML+=t+`<br /><span style="font-size: 10px;">${s}</span>`,o.innerHTML=s,n.appendChild(r),a.insertBefore(n,a.firstChild)}function loadMessages(){fetch(chatApiUrl).then(e=>e.json()).then(e=>{e.sort((e,t)=>e.time>t.time?-1:1),e.forEach(e=>{addMessageToChat(e.user,e.text,e.time)})}).catch(e=>{console.error("Error:",e)})}function updateMessage(e,t,s,a){Swal.fire({title:"Update Message",input:"text",inputValue:t,inputAttributes:{autocapitalize:"off"},showCancelButton:!0,confirmButtonText:"Save",preConfirm(t){if(t){let s=formatTime();a.innerHTML=`${t} (${s})`,fetch(chatApiUrl,{method:"PATCH",headers:{"Content-Type":"application/json"},body:JSON.stringify({user:e,text:t,time:s})}).then(e=>{204===e.status?console.log("Message updated successfully."):console.error("Failed to update message.")}).catch(e=>{console.error("Error:",e)})}else Swal.showValidationMessage("Please enter a message")}})}function deleteMessage(e,t,s,a){Swal.fire({title:"Delete Message",text:"Are you sure you want to delete this message?",showCancelButton:!0,confirmButtonText:"Delete",cancelButtonText:"Cancel",confirmButtonColor:"#d33",dangerMode:!0}).then(n=>{n.isConfirmed&&(a.remove(),fetch(chatApiUrl,{method:"DELETE",headers:{"Content-Type":"application/json"},body:JSON.stringify({user:e,text:t,time:s})}).then(e=>{204===e.status?console.log("Message deleted successfully."):console.error("Failed to delete message.")}).catch(e=>{console.error("Error:",e)}))})}function loadMessages(){fetch(chatApiUrl).then(e=>e.json()).then(e=>{e.forEach(e=>{addMessageToChat(e.user,e.text,e.time)})}).catch(e=>{console.error("Error:",e)})}Swal.fire({title:"Enter your name:",input:"text",inputAttributes:{autocapitalize:"off"},showCancelButton:!1,confirmButtonText:"Set Name",preConfirm(e){e&&(userName=e,document.getElementById("message-input").disabled=!1,document.getElementById("send-button").disabled=!1,document.getElementById("welcomeMessage").innerHTML=`Hello, <b>${userName}</b>`,chatContainer.style.display="block",fetchAndRenderMessages(),setInterval(fetchAndRenderMessages,3e3))}}),document.getElementById("message-input").addEventListener("keyup",e=>{"Enter"===e.key&&sendMessage()}),document.getElementById("send-button").addEventListener("click",sendMessage),window.onload=loadMessages;
     </script>
 </body>
 </html>
